--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
 
 
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="main-menu navbar-nav ml-auto">
                 {% for item in site.data.navigation.items %}
 
 
