--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -336,7 +336,7 @@ $navbar-padding-y:                  0;
 $navbar-padding-x:                  1rem;
 
 $navbar-nav-link-padding-x:         1rem;
-$navbar-nav-link-font-size:         $font-size-base;
+$navbar-nav-link-font-size:         1rem;
 $navbar-nav-link-font-weight:       $font-weight-light;
 $navbar-nav-link-text-transform:    capitalize;
 
@@ -344,11 +344,11 @@ $navbar-brand-height:               56px; //Logo height
 $navbar-brand-padding-y:            20px;
 $nav-link-line-height:              $navbar-brand-padding-y * 2 + $navbar-brand-height;
 
-$sticky-navbar-brand-height:        40px; //sticky Logo height
+$sticky-navbar-brand-height:        44px; //sticky Logo height
 $sticky-navbar-brand-padding-y:     14px;
 $sticky-nav-link-line-height:       $sticky-navbar-brand-padding-y * 2 + $sticky-navbar-brand-height;
 
-$mobile-navbar-brand-height:        30px; //mobile Logo height
+$mobile-navbar-brand-height:        44px; //mobile Logo height
 $mobile-navbar-brand-padding-y:     10px;
 $mobile-nav-link-line-height:       40px;
 
