--- a/_sass/core/_general.scss
+++ b/_sass/core/_general.scss
@@ -209,8 +209,8 @@ textarea {
 .innerpage-banner {
   position: relative;
   h1 {
-    font-size: $h1-font-size;
-    font-weight: $font-weight-light;
+    font-size: 36px;
+    font-weight: 400;
   }
   h6 {
     margin-bottom: 0;
@@ -223,7 +223,7 @@ textarea {
 .innerpage-banner.center {
   text-align: center;
   h6 {
-    margin-bottom: 50px;
+    //margin-bottom: 50px;
   }
   .breadcrumb {
     left: 0px;
