--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
                     <div class="d-flex align-items-center">
                         
                         <!-- top social -->
-                        <ul class="social-icons">
+                        <!--<ul class="social-icons">
                             <li class="social-icons-item social-facebook m-0">
                                 <a class="social-icons-link w-auto px-2" href="#"><i class="fa fa-facebook"></i></a>
                             </li>
@@ -69,7 +69,7 @@
                             <li class="social-icons-item social-twitter m-0">
                                 <a class="social-icons-link w-auto pl-2" href="#"><i class="fa fa-twitter"></i></a>
                             </li>
-                        </ul>
+                        </ul>-->
                     </div>
                 </div>
             </div>
@@ -112,7 +112,7 @@
             <div class="container">
                 <div class="row">
                     <!-- Footer widget 1 -->
-                    <div class="col-md-8 mx-auto">
+                    <div class="col-md-12 mx-auto">
                         <div class="widget text-center mt-5">
                             <a href="index.html" class="footer-logo mb-3">
                             <!-- SVG Logo Start -->
@@ -123,6 +123,7 @@
                             <p class="mt-3">Florida Injury Lawyers You Can Trust</p>
                             <!-- contact info -->
                             <ul class="p-0 list-inline">
+                                <li class="list-inline-item mr-4"><i class="mr-1 text-primary ti-map-alt"></i>150 SE 2nd Avenue, Suite 300, Miami, FL 33131</li>
                                 <li class="list-inline-item mr-4"><i class="mr-1 text-primary ti-mobile"></i> 888-PR-LAWFL (888-775-2935) </li>
                                 <li class="list-inline-item mr-4"><i class="mr-1 text-primary ti-email"></i> <a href="mailto:info@PRLawFL.com">info@PRLawFL.com</a> </li>
                             </ul>
