--- a/_sass/core/_general.scss
+++ b/_sass/core/_general.scss
@@ -209,8 +209,9 @@ textarea {
 .innerpage-banner {
   position: relative;
   h1 {
-    font-size: 36px;
+    font-size: 52px;
     font-weight: 400;
+    margin-bottom: 0;
   }
   h6 {
     margin-bottom: 0;
@@ -290,7 +291,7 @@ textarea {
     width: 100%;
   }
   iframe {
-    height: 300px;
+    height: 265px;
     width: 100%;
   }
 }
