--- a/_sass/core/_header.scss
+++ b/_sass/core/_header.scss
@@ -12,7 +12,7 @@
   }
   a {
     color: $gray-900;
-    font-size: $font-size-xs;
+    //font-size: $font-size-xs;
     &:hover {
       color: $primary;
     }
