--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
                                 <a class="social-icons-link w-auto px-2" href="https://www.facebook.com/ramasinjurylaw/" target="new"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li class="social-icons-item social-instagram m-0">
-                                <a class="social-icons-link w-auto px-2" href="https://www.instagram.com/ramas.law/" target="new"><i class="fa fa-instagram"></i></a>
+                                <a class="social-icons-link w-auto px-2" href="https://www.instagram.com/ramasinjurylaw/" target="new"><i class="fa fa-instagram"></i></a>
                             </li>
                         </ul>
                     </div>
