--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -123,7 +123,7 @@
                             <p class="mt-3">Florida Injury Lawyers You Can Trust</p>
                             <!-- contact info -->
                             <ul class="p-0 list-inline">
-                                <li class="list-inline-item mr-4"><i class="mr-1 text-primary ti-map-alt"></i>8201 Peters Road, Ste 1000, Plantation, FL 33324</li>
+                               <!--<li class="list-inline-item mr-4"><i class="mr-1 text-primary ti-map-alt"></i>8201 Peters Road, Ste 1000, Plantation, FL 33324</li>-->
                                 <li class="list-inline-item mr-4"><i class="mr-1 text-primary ti-mobile"></i><a href="tel:1-855-954-7529"> 855-954-RLAW (855-954-7529)</a> </li>
                                 <li class="list-inline-item mr-4"><i class="mr-1 text-primary ti-email"></i> <a href="mailto:info@ramaslaw.com">info@ramaslaw.com</a> </li>
                             </ul>
